--- a/views/layouts/default/header.ejs
+++ b/views/layouts/default/header.ejs
@@ -1,4 +1,4 @@
-<header class="py-2 mb-4" style="background-color: rgb(48, 70, 132); border-bottom: 1rem; border-color: black;">
+<header class="py-2 mb-4" style="background-color: gray; border-bottom: 1rem; border-color: black;">
     <div class="container">
       <div class="row justify-content-between">
         
