--- a/views/cadastroProduto.ejs
+++ b/views/cadastroProduto.ejs
@@ -42,8 +42,7 @@
                     <div class="col-12 pb-5">
                         <label class="form-label pb-2">Categoria:</label>
                         <div class="my-2">
-                                <input type="text" name="Categoria" class="form-control" placeholder="digite a categoria ">
-                            
+                                <input type="text" name="categoria" class="form-control" placeholder="digite a categoria ">
                         </div>
                     </div>
                 
