--- a/views/listaProdutos.ejs
+++ b/views/listaProdutos.ejs
@@ -30,7 +30,7 @@
                               <p>Quantidade em estoque: <%- produto.estoque %></p>
                               <p>Categoria: <%- produto.categoria %></p>
                             </div>
-                            <a href="/cadastroProduto/delete/<%- produto.id_produto %>" class="btn btn-danger">
+                            <a href="/cadastroProduto/delete/<%= produto.idProduto %>" class="btn btn-danger">
                               <i class="bi-trash"></i>
                             </a>
                           </div>
