--- a/views/listaProdutos.ejs
+++ b/views/listaProdutos.ejs
@@ -24,9 +24,9 @@
                           <img src="/uploads/<%- produto.imagem %>" class="img-fluid p-0" id="image" style="max-width: 100%;border-radius: 0.5rem 0 0 0.5rem ;">
                           <div class="col-md-8">
                             <div class="card-body mt-4" style="border: none; margin-left: 2rem;">
-                              <h4 class="card-title fw-bold mb-3"><%- produto.nome %></h4>
+                              <h4 class="card-title fw-bold mb-3"><%- produto.Nome %></h4>
                               <h5 class="mb-3">R$<%- produto.valor %></h5>
-                              <p class="card-text">Descrição: <%- produto.descricao %></p>
+                              <p class="card-text">Descrição: <%- produto.Descricao %></p>
                               <p>Quantidade em estoque: <%- produto.estoque %></p>
                               <p>Categoria: <%- produto.categoria %></p>
                             </div>
