--- a/views/listaProdutos.ejs
+++ b/views/listaProdutos.ejs
@@ -20,7 +20,7 @@
                     <% produtos.forEach(produto => { %> 
 
                       <div class="container mt-4">
-                        <div class="row bg-white border rounded-3">
+                        <div class="row bg-white border border-dark rounded-3">
                           <img src="/uploads/<%- produto.imagem %>" class="img-fluid p-0" id="image" style="max-width: 100%;border-radius: 0.5rem 0 0 0.5rem ;">
                           <div class="col-md-8">
                             <div class="card-body mt-4" style="border: none; margin-left: 2rem;">
